--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,5 +36,17 @@
         android:backgroundTint="@color/white"
         android:text="Start recording!"
         android:textStyle="bold"
+        android:textColor="@color/black"
+        android:layout_marginBottom="20dp"/>
+    <!-- Add this button below your existing button -->
+    <Button
+        android:id="@+id/stop"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:backgroundTint="@color/white"
+        android:text="Stop recording."
+        android:textStyle="bold"
         android:textColor="@color/black" />
+
 </LinearLayout>
