--- a/app/src/main/res/layout/activity_transcription.xml
+++ b/app/src/main/res/layout/activity_transcription.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TranscriptionActivity">
+    android:orientation="vertical"
+    android:padding="16dp"
+    android:background="#ADD8E6"> <!-- Light Blue Background Color -->
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/transcriptionTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:textColor="#000000"
+        android:textStyle="bold"
+        android:text="Transcribed Text Will Be Displayed Here"
+        android:gravity="center" />
+</LinearLayout>
